-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 5.0.0-beta1
-
None
-
Kubuntu 21.04 x86-64
-
-
842770b6b57d1326b23a83e99451ad4a3cde5f74 (qt-creator/qt-creator/5.0)
After upgrading from QtCreator 4.15.1 to 5.0.0 beta1, QtCreator no longer shows custom code formatting presets in the Options -> C++ -> Code Style tab. It will silently switch to the default "Qt [built-in]" preset.
I can import my presets using the "Import" button, and it will copy the .xml files to ~/.config/QtProject/qtcreator/codestylesCpp. With previous QtCreator versions the presets were stored in ~/.config/QtProject/qtcreator/codestyles/Cpp (note the last forward slash), and indeed they are still there after the upgrade.
If the location for the code styles was intentionally changed, then I would appreciate if the code styles were moved automatically to the new location on installation. At the very least, users should be notified of this change in the release notes and/or during installation or first start. Otherwise, it looks like the path composition for the code styles is broken in QtCreator 5.0.0 beta1.
| For Gerrit Dashboard: QTCREATORBUG-25989 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 360207,3 | TextEditor: Fix path to code styles | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |