TextEditor: Fix path to code styles

Was broken by c1f90aeca2.

Fixes: QTCREATORBUG-25989
Change-Id: I91879e0adb3cd90be8abddd6a1ca02364b8b9fce
Reviewed-by: Eike Ziller <eike.ziller@qt.io>